--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
 <script 
   src= "https://unpkg.com/jasmine-core/lib/jasmine-core/boot.js"></script>
 
-<script src="servers.test.js"></script> 
+<script src="servers.test.js"></script>
+<script src="payments.test.js"></script>
+<script src="helpers.test.js"></script>   
 
 <!-- end of Jasmine tests -->
 
